{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 27,
  "lineage": "60dfde01-94e5-cf00-debe-3c6922ba78e7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182732170899:vpc/vpc-062722ed06b20636b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ae65fd30d9c8c7cc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a233aede8e00d0b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062722ed06b20636b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0258923bbc4e8e4be",
            "owner_id": "182732170899",
            "tags": {
              "Name": "default-vpcc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182732170899:security-group/sg-0c6dd70e41cc41d9b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6dd70e41cc41d9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALBSecurityGroup",
            "name_prefix": "",
            "owner_id": "182732170899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_ALBSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_ALBSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-062722ed06b20636b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182732170899:security-group/sg-032a9c3f469857d8a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032a9c3f469857d8a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7124655166ff9d4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "182732170899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-062722ed06b20636b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.server-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182732170899:security-group/sg-0c7124655166ff9d4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7124655166ff9d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6dd70e41cc41d9b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSecurityGroup",
            "name_prefix": "",
            "owner_id": "182732170899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-062722ed06b20636b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}